--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,11 +4,16 @@
     padding-bottom: 56.25%;
     padding-top: 30px; height: 0; overflow: hidden;
 }
- 
+
 .video-container iframe, .video-container object, .video-container embed {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.background{
+    background: url('../img/sign_in_img.jpg') no-repeat;
+    background-size: cover;
 }
