minor fix on top of 27 march commit

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -17,3 +17,8 @@
     background: url('../img/sign_in_img.jpg') no-repeat;
     background-size: cover;
 }
+
+
+.nav-bar-tabs-top.hide ~ .view-container .tabs-top .tabs{
+    top: 36px;
+}
