--- a/www/css/style.css
+++ b/www/css/style.css
@@ -16,7 +16,7 @@
 
 
 .background{
-    background: url('../img/sign_in_img.jpg') no-repeat;
+    background: url('../img/sign_in_splash.jpg') no-repeat;
     background-size: cover;
 }
 
@@ -27,7 +27,14 @@
 
 
 #signin-input1{
-  margin-bottom: 10px;
+  margin-top: -10px;
+  margin-bottom: 20px;
   font-size: 10px;
+  border-radius: 25px;
+  border-style: solid;
+  border-width: 2px;
+  padding-bottom: 20px;
+  height: 6.5em;
+
 
 }
