--- a/www/css/style.css
+++ b/www/css/style.css
@@ -25,16 +25,16 @@
     top: 36px;
 }
 
+/*.item-floating-label{
+display: block;
+}*/
 
 #signin-input1{
-  margin-top: -10px;
   margin-bottom: 20px;
-  font-size: 10px;
+  /*font-size: 12px;*/
   border-radius: 25px;
   border-style: solid;
   border-width: 2px;
   padding-bottom: 20px;
-  height: 6.5em;
-
-
+  height: 3.5em;
 }
