commentout remember me checkbox

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -39,6 +39,10 @@ display: block;
   height: 3.5em;
 }
 
-.icon{
-  font-size: 50px;
-}
+/*#remember_me{
+  display: block;
+  text-align: center;
+  line-height: 300%;
+  font-size: .8em;
+  color: white;
+}*/
