--- a/www/css/style.css
+++ b/www/css/style.css
@@ -42,3 +42,15 @@ display: block;
 .icon{
   font-size: 50px;
 }
+
+
+.album-image{
+    height: 110px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.album-first-image{
+    height: 170px;
+}
