--- a/www/css/style.css
+++ b/www/css/style.css
@@ -62,3 +62,57 @@ display: block;
   font-size: .8em;
   color: white;
 }*/
+
+
+
+ /* profile section */
+
+ #profile-bg {
+        position: fixed;
+        left: 0;
+        top: -150px;
+        width: 100%;
+        height: 150px;
+        background-image: url('../img/profile_cover.jpg');
+        background-size: 100%;
+        background-position: 50% 20%;
+        background-repeat: no-repeat;
+        text-align: center;
+      }
+
+      #content {
+        position: relative;
+        margin-top: 150px;
+        background-color: white;
+        box-shadow: 0px -1px 10px rgba(0,0,0,0.4);
+        padding-top: 200px;
+      }
+
+      #profile-info {
+        position: absolute;
+        top: -95px;
+        width: 100%;
+        z-index: 2;
+        text-align: center;
+      }
+      #profile-name {
+        color: #444;
+        font-size: 26px;
+      }
+      #profile-description {
+        font-size: 15px;
+        color: #888;
+      }
+      #profile-description a {
+        color: #888;
+      }
+
+      #profile-image {
+        display: block;
+        border-radius: 100px;
+        border: 2px solid #fff;
+        width: 128px;
+        height: 128px;
+        margin: 30px auto 0;
+        box-shadow: 0px 0px 4px rgba(0,0,0,0.7);
+      }
