--- a/www/css/style.css
+++ b/www/css/style.css
@@ -86,6 +86,7 @@ display: block;
         background-color: white;
         box-shadow: 0px -1px 10px rgba(0,0,0,0.4);
         padding-top: 200px;
+        /*border-radius:  0 0  30% 30%;*/
       }
 
       #profile-info {
@@ -115,4 +116,13 @@ display: block;
         height: 128px;
         margin: 30px auto 0;
         box-shadow: 0px 0px 4px rgba(0,0,0,0.7);
+      }
+
+      #profile-btn{
+        padding-top: 10px;
+        padding-right: 30px;
+        padding-left: 30px;
+        padding-bottom: 20px;
+        font-size: 12px;
+        color: #888;
       }
