--- a/www/css/style.css
+++ b/www/css/style.css
@@ -125,3 +125,12 @@ display: block;
         font-size: 12px;
         color: #888;
       }
+
+
+
+
+      .center {
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+  }
