--- a/www/css/style.css
+++ b/www/css/style.css
@@ -133,3 +133,10 @@ display: block;
       margin-right: auto;
       display: block;
   }
+
+
+      .profile_basic_info{
+          font-size:12px;
+          padding: 20px;
+          color: #888;
+       }
