--- a/www/css/style.css
+++ b/www/css/style.css
@@ -76,7 +76,7 @@ display: block;
         background-size: 100%;
         background-position: 50% 20%;
         background-repeat: no-repeat;
-        text-align: center;
+        text-align: right;
       }
 
       #content {
@@ -94,6 +94,14 @@ display: block;
         z-index: 2;
         text-align: center;
       }
+
+      #pro-pic-edit{
+          margin-top:-40px;
+          text-shadow: 1px 3px 6px #000000;
+      }
+
+      }
+
       #profile-name {
         color: #444;
         font-size: 26px;
