--- a/www/css/style.css
+++ b/www/css/style.css
@@ -85,6 +85,7 @@ display: block;
         background-color: white;
         box-shadow: 0px -1px 10px rgba(0,0,0,0.4);
         padding-top: 240px;
+        padding-bottom: 30px;
       }
 
       #profile-info {
@@ -112,6 +113,7 @@ display: block;
       }
       #profile-description a {
         color: #888;
+        padding:10px;
       }
 
       #profile-image {
@@ -126,10 +128,9 @@ display: block;
 
       #profile-btn{
         padding-top: 10px;
-        padding-right: 30px;
-        padding-left: 30px;
-        padding-bottom: 20px;
         font-size: 12px;
+        margin-bottom: auto;
+        padding-bottom: 30px;
         color: #888;
       }
 
