--- a/www/css/style.css
+++ b/www/css/style.css
@@ -143,9 +143,15 @@ display: block;
       display: block;
   }
 
+  .information{
+    font-size: 12px;
+    padding: 15px 15px 5px 0;
+    color: #11a74a;
+  }
+
 
       .profile_basic_info{
-          font-size:12px;
-          padding: 20px;
+          font-size:10px;
+          padding: 30px;
           color: #888;
        }
