--- a/www/css/style.css
+++ b/www/css/style.css
@@ -135,7 +135,13 @@ display: block;
       }
 
 
+      .vertical-line{
+         border-left: thin solid  #11a74a;
+         margin-top: 10px;
+         margin-bottom: 10px;
+         margin-left: 5%;
 
+      }
 
       .center {
       margin-left: auto;
