--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,22 @@
 /* Empty. Add your own CSS if you like */
+
+input::-webkit-input-placeholder {
+color: white !important;
+}
+
+input:-moz-placeholder { /* Firefox 18- */
+color: white !important;
+}
+
+input::-moz-placeholder {  /* Firefox 19+ */
+color: white !important;
+}
+
+input:-ms-input-placeholder {
+color: white !important;
+}
+
+
 .video-container {
     position: relative;
     padding-bottom: 56.25%;
@@ -14,7 +32,6 @@
 }
 
 
-
 .background{
     background: url('../img/sign_in_splash.jpg') no-repeat;
     background-size: cover;
@@ -25,19 +42,6 @@
     top: 36px;
 }
 
-/*.item-floating-label{
-display: block;
-}*/
-
-#signin-input1{
-  margin-bottom: 20px;
-  /*font-size: 12px;*/
-  border-radius: 25px;
-  border-style: solid;
-  border-width: 2px;
-  padding-bottom: 20px;
-  height: 3.5em;
-}
 
 
 .album-image{
