--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,19 +1,19 @@
 /* Empty. Add your own CSS if you like */
 
 input::-webkit-input-placeholder {
-color: white !important;
+color: #22c064 !important;
 }
 
 input:-moz-placeholder { /* Firefox 18- */
-color: white !important;
+color: #22c064 !important;
 }
 
 input::-moz-placeholder {  /* Firefox 19+ */
-color: white !important;
+color: #22c064 !important;
 }
 
 input:-ms-input-placeholder {
-color: white !important;
+color: #22c064 !important;
 }
 
 
