--- a/www/css/style.css
+++ b/www/css/style.css
@@ -107,35 +107,47 @@ color: #22c064 !important;
         text-align: center;
       }
 
-      #pro-pic-edit{
-          margin-top:-40px;
-          text-shadow: 1px 3px 6px #000000;
-      }
 
-      }
 
-      #profile-name {
-        color: #444;
-        font-size: 26px;
-      }
-      #profile-description {
-        font-size: 15px;
-        color: #888;
-        padding:10px;
-      }
-      #profile-description a {
-        color: #888;
-        padding:10px;
-      }
+
 
       #profile-image {
         display: block;
-        border-radius: 100px;
-        border: 2px solid #fff;
-        width: 128px;
-        height: 128px;
-        margin: 30px auto 0;
+        border-radius: 5px;
+        border: 1px solid #fff;
+        width: 80px;
+        height: 80px;
+        margin-left: 8px;
         box-shadow: 0px 0px 4px rgba(0,0,0,0.7);
+      }
+
+
+      #pro-pic-edit{
+          position: fixed;
+          margin-top:-40px;
+          margin-left: -40px;
+          text-shadow: 1px 3px 6px #000000;
+      }
+
+      #profile-name {
+        color: #ffffff;
+        font-size: 16px;
+        padding-left: 10px;
+        margin-top: 30px;
+        text-shadow: 1px 3px 6px #000000;
+      }
+
+      #profile-description {
+        font-size: 10px;
+        color: #ffffff;
+        margin-top: -25px;
+        margin-left: 100px;
+        text-shadow: 1px 3px 6px #000000;
+      }
+
+      #profile-description a {
+        color: #ffffff;
+        text-decoration: none;
       }
 
       #profile-btn{
