--- a/www/css/style.css
+++ b/www/css/style.css
@@ -81,22 +81,22 @@ color: #22c064 !important;
  #profile-bg {
         position: fixed;
         left: 0;
-        top: -150px;
+        top: -280px;
         width: 100%;
-        height: 150px;
-        background-size: 100%;
-        background-position: 50% 20%;
-        background-repeat: no-repeat;
+        height: 280px;
+        /*background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;*/
         text-align: right;
       }
 
       #content {
         position: relative;
-        margin-top: 150px;
+        margin-top: 280px;
         background-color: white;
         box-shadow: 0px -1px 10px rgba(0,0,0,0.4);
-        padding-top: 240px;
-        padding-bottom: 30px;
+        padding-top: 50px;
+        padding-bottom: 10px;
       }
 
       #profile-info {
@@ -153,8 +153,8 @@ color: #22c064 !important;
       #profile-btn{
         padding-top: 10px;
         margin-bottom: auto;
-        padding-bottom: 30px;
-        color: #888;
+        padding-bottom: 10px;
+        color: #22c064;
       }
 
 
