--- a/www/css/style.css
+++ b/www/css/style.css
@@ -94,7 +94,7 @@ color: #22c064 !important;
         position: relative;
         margin-top: 280px;
         background-color: white;
-        box-shadow: 0px -1px 10px rgba(0,0,0,0.4);
+        box-shadow: 0px -1px 5px rgba(0,0,0,0.4);
         padding-top: 50px;
         padding-bottom: 10px;
       }
@@ -134,7 +134,7 @@ color: #22c064 !important;
         font-size: 16px;
         padding-left: 10px;
         margin-top: 30px;
-        text-shadow: 1px 3px 6px #000000;
+        text-shadow: 1px 2px 5px #000000;
       }
 
       #profile-description {
@@ -142,7 +142,7 @@ color: #22c064 !important;
         color: #ffffff;
         margin-top: -25px;
         margin-left: 100px;
-        text-shadow: 1px 3px 6px #000000;
+        text-shadow: 1px 3px 5px #000000;
       }
 
       #profile-description a {
@@ -158,13 +158,13 @@ color: #22c064 !important;
       }
 
 
-      .vertical-line{
+      /*.vertical-line{
          border-left: thin solid  #11a74a;
          margin-top: 10px;
          margin-bottom: 10px;
          margin-left: 5%;
 
-      }
+      }*/
 
       .center {
       margin-left: auto;
@@ -174,8 +174,7 @@ color: #22c064 !important;
 
   .information{
     font-size: 12px;
-    padding: 15px 15px 5px 0;
-    color: #11a74a;
+    color: #22c064;
   }
 
 
