updated basic info

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -172,9 +172,11 @@ color: #22c064 !important;
       display: block;
   }
 
+
+
   .information{
-    font-size: 12px;
-    color: #22c064;
+    font-size: 14px;
+    color: #888;
   }
 
 
