--- a/www/css/style.css
+++ b/www/css/style.css
@@ -187,12 +187,19 @@ color: #22c064 !important;
        }
 
 
-   .circle {
+   /*.circle {
      	width: 60px;
      	height: 60px;
-     	background: #888;
+     	background: #ffffff;
      	-moz-border-radius: 50px;
      	-webkit-border-radius: 50px;
      	border-radius: 50px;
-      text-shadow: 1px 3px 5px #000000;
-  }
+      border: 1px solid #a4a4a4;
+
+  }*/
+
+  .circle-shape{
+      color:white;
+      text-shadow: 1px 2px 3px #000000;
+      border: 1px solid #fff;
+    }
