--- a/www/css/style.css
+++ b/www/css/style.css
@@ -158,13 +158,7 @@ color: #22c064 !important;
       }
 
 
-      /*.vertical-line{
-         border-left: thin solid  #11a74a;
-         margin-top: 10px;
-         margin-bottom: 10px;
-         margin-left: 5%;
 
-      }*/
 
       .center {
       margin-left: auto;
@@ -187,6 +181,18 @@ color: #22c064 !important;
        }
 
 
+       .activity-class{
+          width: 100%;
+          padding: 5px;
+          text-align: center;
+       }
+
+       .activity-icon{
+          color:#22c064;
+          font-size:20px;
+          padding:2px 0 0 1px;
+       }
+
    /*.circle {
      	width: 60px;
      	height: 60px;
@@ -199,7 +205,5 @@ color: #22c064 !important;
   }*/
 
   .circle-shape{
-      color:white;
-      text-shadow: 1px 2px 3px #000000;
-      border: 1px solid #fff;
+      color:#22c064;
     }
