--- a/www/css/style.css
+++ b/www/css/style.css
@@ -99,13 +99,13 @@ color: #22c064 !important;
         padding-bottom: 10px;
       }
 
-      /*#profile-info {
-        position: absolute;
+      #profile-info {
+        position: relative;
         top: -95px;
         width: 100%;
-        z-index: 2;
-        text-align: center;
-      }*/
+        /*z-index: 2;
+        text-align: center;*/
+      }
 
 /*--------------------------------------------------------------------------------------*/
 /*hexaqgonal profile image*/
@@ -203,17 +203,16 @@ color: #22c064 !important;
 
       #profile-name {
         color: #ffffff;
-        font-size: 16px;
+        font-size: 12px;
         padding-left: 10px;
-        margin-top: 30px;
         text-shadow: 1px 2px 5px #000000;
       }
 
       #profile-description {
         font-size: 10px;
         color: #ffffff;
-        margin-top: -25px;
-        margin-left: 100px;
+        margin-left:10px;
+        margin-top: -20px;
         text-shadow: 1px 3px 5px #000000;
       }
 
