--- a/www/css/style.css
+++ b/www/css/style.css
@@ -76,17 +76,18 @@ color: #22c064 !important;
 
 
 
- /* profile section */
+ /*------------ cover photo-----------*/
 
+/*---------------------. /Cover photo----------------------------*/
  #profile-bg {
         position: fixed;
         left: 0;
-        top: -280px;
+        /*top: -280px;*/
         width: 100%;
         height: 280px;
-        /*background-size: contain;
+        /*background-size: contain;*/
         background-position: center;
-        background-repeat: no-repeat;*/
+        background-repeat: no-repeat;
         text-align: right;
       }
 
@@ -94,21 +95,53 @@ color: #22c064 !important;
         position: relative;
         margin-top: 280px;
         background-color: white;
+        /*margin-bottom: -50px;*/
         box-shadow: 0px -1px 5px rgba(0,0,0,0.4);
-        padding-top: 50px;
-        padding-bottom: 10px;
       }
 
       #profile-info {
         position: relative;
         top: -95px;
         width: 100%;
-        /*z-index: 2;
+        padding-top: 50px;
+        /*z-index: 1;
         text-align: center;*/
       }
 
-/*--------------------------------------------------------------------------------------*/
-/*hexaqgonal profile image*/
+      #pro-pic-edit{
+          position: fixed;
+          margin-top:-40px;
+          margin-left: -40px;
+          text-shadow: 1px 3px 6px #000000;
+      }
+
+      #profile-name {
+        color: #ffffff;
+        font-size: 14px;
+        padding-left: 10px;
+        text-shadow: 1px 2px 5px #000000;
+      }
+
+      #profile-description {
+        font-size: 10px;
+        color: #ffffff;
+        margin-left:10px;
+        margin-top: -20px;
+        text-shadow: 1px 3px 5px #000000;
+      }
+
+      #profile-description a {
+        color: #ffffff;
+        text-decoration: none;
+      }
+
+      #profile-btn{
+        margin-top: -10px;
+        color: #22c064;
+      }
+
+
+/*----------------------------hexaqgonal profile image------------------------------*/
         .profile_image {
           position: relative;
           width: 50px;
@@ -180,7 +213,7 @@ color: #22c064 !important;
           background: inherit;
         }
 
-/*-------------------------------------------------------------------------*/
+/*-----------------------------hexagonal profile image--------------------------------------*/
 
 
       /*#profile-image {
@@ -194,44 +227,11 @@ color: #22c064 !important;
       }*/
 
 
-      #pro-pic-edit{
-          position: fixed;
-          margin-top:-40px;
-          margin-left: -40px;
-          text-shadow: 1px 3px 6px #000000;
-      }
-
-      #profile-name {
-        color: #ffffff;
-        font-size: 12px;
-        padding-left: 10px;
-        text-shadow: 1px 2px 5px #000000;
-      }
-
-      #profile-description {
-        font-size: 10px;
-        color: #ffffff;
-        margin-left:10px;
-        margin-top: -20px;
-        text-shadow: 1px 3px 5px #000000;
-      }
-
-      #profile-description a {
-        color: #ffffff;
-        text-decoration: none;
-      }
-
-      #profile-btn{
-        padding-top: 10px;
-        margin-bottom: auto;
-        padding-bottom: 10px;
-        color: #22c064;
-      }
 
 
 
 
-      .center {
+      .center{
       margin-left: auto;
       margin-right: auto;
       display: block;
