--- a/www/css/style.css
+++ b/www/css/style.css
@@ -82,7 +82,7 @@ color: #22c064 !important;
  #profile-bg {
         position: fixed;
         left: 0;
-        /*top: -280px;*/
+        top: -280px;
         width: 100%;
         height: 280px;
         /*background-size: contain;*/
@@ -96,7 +96,7 @@ color: #22c064 !important;
         margin-top: 280px;
         background-color: white;
         /*margin-bottom: -50px;*/
-        box-shadow: 0px -1px 5px rgba(0,0,0,0.4);
+        /*box-shadow: 0px -1px 5px rgba(0,0,0,0.4);*/
       }
 
       #profile-info {
